# flash-attention-v100

./: README.md  pyproject.toml  requirements.txt  run.sh  setup.py  test.py
benchmarks/: benchmark_unsloth.ipynb  benchmark_unsloth.py
flash_attn/: __init__.py  bert_padding.py  flash_attn_interface.py
flash_attn_v100/: __init__.py  flash_attn_interface.py
include/: 00_volta_const.cuh  01_backward_config.cuh  01_forward_config.cuh  02_fused_func.cuh  02_wmma.cuh  03_wmma.cuh  backward.h  debug.h  dropout.h  forward.h  fused_mha.h  fused_mma_m16n16k16.h  fused_mma_m8n8k4.h  gemm_smem.h  kernel.h  mat_mul.h  mha.h  mma_m16n16k16.h  mma_m8n8k4.h  philox.h  product.h  rotary.h  softmax.h  swizzle.h  template.h
kernel/: fused_mha_api.cpp  fused_mha_backward.cu  fused_mha_backward_varlen.cu  fused_mha_forward.cu  fused_mha_forward_kvcache.cu  fused_mha_forward_varlen.cu
utils/docs/: debug.md
utils/sass/mma_kernel/: compile.sh  forward_kernel.cu  ncu.sh
utils/sass/mma_register/: matrix_a_col.cu  matrix_a_row.cu  matrix_b_col.cu  matrix_b_row.cu  matrix_fragment_col.cu  matrix_fragment_row.cu  matrix_store_col.cu  matrix_store_row.cu  mma_m16n16k16.h
utils/sass/mma_swizzle/: backward_kernel.cu  backward_kernel_swz.cu  forward_kernel.cu  forward_kernel_swz.cu  matmul_swizzle.cu  mma_m16n16k16.h  mma_m16n16k16_swz.h  ncu.sh  ncu_bwd.sh  ncu_fwd.sh  swizzle.h
