[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
    "packaging",
    "torch"
]
build-backend = "setuptools.build_meta"

[project]
name = "flash_attn_v100"
version = "26.02"
description = "Flash Attention 2 for Tesla v100"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "einops",
    "packaging",
    "ninja"
]

license = "BSD-3-Clause"
license-files = ["LICENSE", "AUTHORS"]

dynamic = ["authors", "classifiers", "urls"]

[tool.setuptools]
packages = ["flash_attn_v100"]

[tool.setuptools.exclude-package-data]
"*" = [
    "build",
    "kernel",
    "include",
    "flash_attn_v100.egg-info",
    "*.cu",
    "*.cuh",
    "*.cpp",
    "*.h"
]
