[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
    "packaging>=26.0",
    "torch @ https://download-r2.pytorch.org/whl/cu129/torch-2.10.0%2Bcu129-cp312-cp312-manylinux_2_28_x86_64.whl#sha256=a3c703e74a88cccfeb4b1807c49d563a0a73793ba72d4fa035d4ac5885f3aefd",
    "ninja>=1.13.0",
    "psutil>=7.2.2",
    "numpy>=2.4.4"
]


[project]
name = "flash_attn_v100"
version = "26.04"
description = "Flash Attention 2 for Tesla v100"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE", "AUTHORS"]
dynamic = ["authors", "classifiers", "urls"]
dependencies = [
    "torch @ https://download-r2.pytorch.org/whl/cu129/torch-2.10.0%2Bcu129-cp312-cp312-manylinux_2_28_x86_64.whl#sha256=a3c703e74a88cccfeb4b1807c49d563a0a73793ba72d4fa035d4ac5885f3aefd",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
    "packaging>=26.0",
    "ninja>=1.13.0",
    "psutil>=7.2.2",
    "numpy>=2.4.4"
]

[tool.setuptools]
packages = ["flash_attn_v100"]

[tool.setuptools.exclude-package-data]
"*" = [
    "build",
    "kernel",
    "include",
    "flash_attn_v100.egg-info",
    "*.cu",
    "*.cuh",
    "*.cpp",
    "*.h"
]
